# server/checkout-manager-server/src/main/kotlin/com/wutsi/checkout/manager/dto/Business.kt
@@ -22,4 +22,6 @@ public data class Business(
     public val totalOrders: Long = 0,
     public val totalSales: Long = 0,
     public val totalViews: Long = 0,
+    public val totalDonations: Long = 0,
+    public val totalDonationValue: Long = 0,
 )
