# server/checkout-manager-server/src/main/kotlin/com/wutsi/checkout/manager/dto/DonationKpiSummary.kt
@@ -1,0 +1,12 @@
+package com.wutsi.checkout.manager.dto
+
+import org.springframework.format.`annotation`.DateTimeFormat
+import java.time.LocalDate
+import kotlin.Long
+
+public data class DonationKpiSummary(
+    @get:DateTimeFormat(pattern = "yyyy-MM-dd")
+    public val date: LocalDate = LocalDate.now(),
+    public val totalDonations: Long = 0,
+    public val totalValue: Long = 0,
+)
