# server/checkout-manager-server/src/main/kotlin/com/wutsi/checkout/manager/dto/SearchDonationKpiResponse.kt
@@ -1,0 +1,7 @@
+package com.wutsi.checkout.manager.dto
+
+import kotlin.collections.List
+
+public data class SearchDonationKpiResponse(
+    public val kpis: List<DonationKpiSummary> = emptyList(),
+)
